@@ -1,9 +1,9 @@
 package me.pafias.pffa.commands.subcommands;
 
-import me.pafias.pffa.commands.ICommand;
+import me.pafias.pffa.commands.BaseFFACommand;
 import me.pafias.pffa.objects.Spawn;
 import me.pafias.pffa.services.SpawnManager;
-import me.pafias.pffa.util.CC;
+import me.pafias.putils.CC;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
@@ -11,9 +11,8 @@ import org.jetbrains.annotations.NotNull;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
-public class SpawnCommand extends ICommand {
+public class SpawnCommand extends BaseFFACommand {
 
     public SpawnCommand() {
         super("spawn", "ffa.spawn");
@@ -33,40 +32,46 @@ public class SpawnCommand extends ICommand {
 
     @Override
     public void execute(String mainCommand, CommandSender sender, String[] args) {
-        if (!(sender instanceof Player)) {
+        if (!(sender instanceof Player player)) {
             sender.sendMessage(CC.t("&cOnly players."));
             return;
         }
         if (args.length < 2) {
-            sender.sendMessage(CC.t("&c/" + mainCommand + " " + getName() + " " + getArgs() + (sender.hasPermission("ffa.spawn.others") ? " [player]" : "")));
+            sender.sendMessage(CC.t("&c/" + mainCommand + " " + getName() + " " + getArgs() + (sender.hasPermission(getPermission() + ".others") ? " [player]" : "")));
             return;
         }
-        Player player = (Player) sender;
-        String name = args[1];
+        final String name = args[1];
         Player target = player;
-        if (args.length >= 3 && sender.hasPermission("ffa.spawn.others"))
+        if (args.length >= 3 && sender.hasPermission(getPermission() + ".others"))
             target = plugin.getServer().getPlayer(args[2]);
         if (target == null) {
             sender.sendMessage(CC.t("&cPlayer not found."));
             return;
         }
-        SpawnManager spawnManager = plugin.getSM().getSpawnManager();
+        final SpawnManager spawnManager = plugin.getSM().getSpawnManager();
         if (!spawnManager.exists(name)) {
             sender.sendMessage(CC.t("&cThat spawn does not exist!"));
             return;
         }
-        Spawn spawn = spawnManager.getSpawn(name);
+        final Spawn spawn = spawnManager.getSpawn(name);
         spawn.teleport(target);
         sender.sendMessage(CC.t("&aTeleported" + (sender != target ? target.getName() : "")));
     }
 
     @Override
     public List<String> tabComplete(CommandSender sender, Command command, String alias, String[] args) {
-        if (args.length >= 3) return Collections.emptyList();
-        return plugin.getSM().getSpawnManager().getSpawns().keySet()
-                .stream()
-                .filter(s -> s.toLowerCase().startsWith(args[1].toLowerCase()))
-                .collect(Collectors.toList());
+        if (args.length == 2)
+            return plugin.getSM().getSpawnManager().getSpawns().keySet()
+                    .stream()
+                    .filter(s -> s.toLowerCase().startsWith(args[1].toLowerCase()))
+                    .toList();
+        else if (args.length == 3)
+            return plugin.getServer().getOnlinePlayers()
+                    .stream()
+                    .filter(p -> ((Player) sender).canSee(p))
+                    .map(Player::getName)
+                    .filter(s -> s.toLowerCase().startsWith(args[2].toLowerCase()))
+                    .toList();
+        return Collections.emptyList();
     }
-
 }
